# bazel-nx-example

./: .bazelrc  .editorconfig  .env  .gitignore  BUILD.bazel  README.md  WORKSPACE  angular-metadata.tsconfig.json  angular.json  angular.json.bak  client.dockerfile  docker-compose.yml  nx.json  ormconfig.json  package-lock.json  package.json  server.dockerfile  stack.yml  tsconfig.json  tslint.json
apps/api/src/: BUILD.bazel  db.config.ts  generate-typings.js  graphql.schema.ts  main.ts
apps/api/src/app/: BUILD.bazel  app.controller.ts  app.module.ts  app.service.ts  db.config.ts
apps/api/src/auth/: BUILD.bazel  auth-config.module.ts  auth.controller.ts  auth.module.ts  auth.service.ts  graphql-auth.guard.ts
apps/api/src/auth/interfaces/: jwt-payload.interface.ts
apps/api/src/cats/: BUILD.bazel  cat.entity.ts  cats.controller.ts  cats.module.ts  cats.resolvers.ts  cats.service.ts
apps/api/src/cats/dto/: create-cat.dto.ts
apps/api/src/cats/entities/: cat.ts
apps/api/src/user/: BUILD.bazel  login-user.dto.ts  user.entity.ts  user.module.ts  user.service.ts
apps/api/src/user/dto/: sign-in.dto.ts  sign-up.dto.ts
apps/api/src/user/entities/: user.entity.ts
apps/lazy-loading-app/: BUILD.bazel  jest.config.js  proxy.conf.json  tsconfig.app.json  tsconfig.spec.json
apps/lazy-loading-app-e2e/: cypress.json  tsconfig.e2e.json
apps/lazy-loading-app-e2e/src/integration/: app.spec.ts
apps/lazy-loading-app/src/: BUILD.bazel  index.html  main.dev.ts  main.prod.ts  rxjs_shims.js  styles.scss
apps/lazy-loading-app/src/app/: BUILD.bazel  app-routing.module.ts  app.component.html  app.component.ts  app.module.dev.ts  app.module.ts  app.routing.ts  graphql.module.ts
apps/lazy-loading-app/src/app/_components/: alert.component.ts  index.ts
apps/lazy-loading-app/src/app/_guards/: auth.guard.ts
apps/lazy-loading-app/src/app/_services/: authentication.service.ts  user.service.ts
apps/lazy-loading-app/src/app/alert/: BUILD.bazel  alert.component.ts  alert.module.ts  alert.service.ts
apps/lazy-loading-app/src/app/auth/: BUILD.bazel  auth.guard.ts  auth.module.ts  authentication.service.ts
apps/lazy-loading-app/src/app/components/: alert.component.ts
apps/lazy-loading-app/src/app/guards/: auth.guard.ts
apps/lazy-loading-app/src/app/helpers/: error.interceptor.ts  jwt.interceptor.ts
apps/lazy-loading-app/src/app/home/: BUILD.bazel  cats.service.ts  home-routing.module.ts  home.component.html  home.component.ts  home.module.ts
apps/lazy-loading-app/src/app/login/: BUILD.bazel  login.component.html  login.component.ts  login.module.ts
apps/lazy-loading-app/src/app/models/: cat.ts  index.ts  user.ts
apps/lazy-loading-app/src/app/register/: BUILD.bazel  register-routing.module.ts  register.component.html  register.component.ts  register.module.ts
apps/lazy-loading-app/src/app/services/: alert.service.ts  authentication.service.ts  cats.service.ts  index.ts  user.service.ts
apps/lazy-loading-app/src/environments/: environment.ts
libs/api-interface/src/: BUILD.bazel  index.ts
libs/api-interface/src/interfaces/: cat.ts  user.ts
libs/api-interface/src/lib/: generate-typings.ts  interfaces.ts
libs/proto-interface/src/: BUILD.bazel  cat.proto  index.ts  message.proto  user.proto
