package(default_visibility = ["//visibility:public"])

# TS compile
load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "api-interface",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*spec.ts"],
    ),
    module_name = "@lazy/api-interface",
    node_modules = "@npm//:node_modules",
)
