load("@npm_bazel_typescript//:index.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "app",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    module_name = "@api/app",
    deps = [
        "//apps/api/src/auth",
        "//apps/api/src/cats",
        "//apps/api/src/user",
        "//libs/api-interface/src",
        "@npm//@nestjs/common",
        "@npm//@nestjs/passport",
        "@npm//@nestjs/swagger",
        "@npm//@nestjs/typeorm",
        "@npm//@types/node",
        "@npm//dotenv",
        "@npm//tslib",
        "@npm//typeorm",
    ],
)
