load("@npm_bazel_typescript//:index.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "auth",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    module_name = "@api/auth",
    deps = [
        "//apps/api/src/user",
        "//libs/proto-interface/src",
        "@npm//@nestjs/common",
        "@npm//@nestjs/jwt",
        "@npm//@nestjs/passport",
        "@npm//@nestjs/swagger",
        "@npm//@nestjs/typeorm",
        "@npm//@types/passport-jwt",
        "@npm//class-validator",
        "@npm//tslib",
        "@npm//typeorm",
    ],
)
