load("@npm_bazel_typescript//:index.bzl", "ts_library")

package(default_visibility = ["//visibility:public"])

ts_library(
    name = "user",
    srcs = glob(
        include = ["**/*.ts"],
        exclude = ["**/*.spec.ts"],
    ),
    module_name = "@api/user",
    deps = [
        "//libs/proto-interface/src",
        "@npm//@nestjs/common",
        "@npm//@nestjs/passport",
        "@npm//@nestjs/swagger",
        "@npm//@nestjs/typeorm",
        "@npm//argon2",
        "@npm//class-validator",
        "@npm//node-gyp",
        "@npm//typeorm",
    ],
)
