load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//:__subpackages__"])

ng_module(
    name = "alert",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*spec.ts"],
    ),
    assets = glob(["*.html"]),
    tsconfig = "//:tsconfig.json",
    deps = [
        "@npm//@angular/core",
        "@npm//@angular/router",
        "@npm//rxjs",
        "@npm//tslib",
    ],
)
