load("@npm_angular_bazel//:index.bzl", "ng_module")

package(default_visibility = ["//:__subpackages__"])

ng_module(
    name = "auth",
    srcs = glob(
        include = ["*.ts"],
        exclude = ["*spec.ts"],
    ),
    tsconfig = "//:tsconfig.json",
    deps = [
        "//libs/api-interface/src",
        "@npm//@angular/common",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "@npm//rxjs",
        "@npm//tslib",
    ],
)
